# Pass-Gen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark_data.json  pyproject.toml  requirements.txt  setup.py
.github/: REPOSITORY_SETUP.md  branch-protection-rules.md
.github/workflows/: ci-cd.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
pass_gen/: __init__.py  pass_gen.py
test/: benchmark_passwords.py  test_eff_wordlist.py  test_new_features.py
tests/: test_pass_gen.py
