[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pass-gen"
version = "1.0.0"
description = "A cryptographically secure password generation library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["password", "security", "cryptography", "generator"]

authors = [
    {name = "Pass-Gen Team", email = "your-email@example.com"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Brivox5/Pass-Gen"
Documentation = "https://pass-gen.readthedocs.io/"
Repository = "https://github.com/Brivox5/Pass-Gen"
Issues = "https://github.com/Brivox5/Pass-Gen/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
pass_gen = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=pass_gen --cov-report=html"

[tool.coverage.run]
source = ["pass_gen"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]